<?xml version="1.0"?>
<package format="3">
  <name>jsk_recognition_msgs</name>
  <version>1.2.10</version>
  <description>ROS 2 messages for jsk_pcl_ros and jsk_perception.</description>

  <url type="repository">http://github.com/allenh1/jsk_recognition</url>
  <url type="bugtracker">http://github.com/allenh1/jsk_recognition/issues</url>
  <!-- <url type="website">https://jsk-docs.readthedocs.io/projects/jsk_recognition/en/latest/jsk_recognition_msgs</url> -->

  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>

  <maintainer email="hunter.allen@ghostrobotics.io">Hunter L. Allen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>  
  <depend>std_msgs</depend>  
  <depend>geometry_msgs</depend>
  <depend>jsk_footstep_msgs</depend>
  <depend>pcl_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
